# social-account-metabase

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run.local.sh
authentication/: admin.py  helpers.py  models.py  tasks.py  urls.py
authentication/migrations/: 0002_alter_token_token.py
authentication/templates/: all_auth.html
authentication/views/: base.py  github.py
backup/: admin.py  apps.py  models.py  tasks.py
backup/management/commands/: initiate_db.py
base/: helpers.py  models.py
dockerfiles/: Dockerfile  Dockerfile.genai
github_app/: apps.py  blog-template.md  helpers.py  tests.py
linkedin/: admin.py  constants.py  error.py  helpers.py  models.py  tasks.py
linkedin/migrations/: 0002_alter_linkedinpost_linkedin_post_id.py
llm_app/: apps.py
main/: celery.py  entrypoint.sh  mongo.py  settings.py  urls.py
main/authentication/: admin.py  helpers.py  models.py  urls.py  views.py
main/authentication/migrations/: 0001_initial.py  0003_token_created_at_token_updated_at.py  0004_authserviceconfiguration.py  0005_authserviceconfiguration_meta_and_more.py
main/authentication/templates/: all_auth.html  all_auth_v1.html  base.html
main/authentication/views/: __init__.py  dashboard.py  github.py  google.py  linkedin.py  twitter.py
main/db/: database_backup.json
main/github_app/: constants.py  helpers.py  models.py  tests.py
main/google_app/: apps.py  constants.py  helpers.py  tests.py
main/helpers/: mega.py  storj.py
main/leetcode_app/: apps.py  helpers.py  tasks.py  tests.py
main/linkedin/: admin.py  helpers.py  tasks.py  tests.py
main/llm_app/: helpers.py  prompt_templates.py  tests.py  utils.py
main/main/: celery.py  settings.py  urls.py
main/twitter_app/: admin.py  apps.py  helpers.py  models.py  tasks.py  tests.py
(+4 files in other folders)
