[tool.poetry]
name = "social-account-metabase"
version = "0.1.0"
description = ""
authors = ["Subhomoy Roy Choudhury <subhomoyrchoudhury@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.8.6"
aiosignal = "1.3.1"
amqp = "5.1.1"
asgiref = "3.7.2"
async-timeout = "4.0.3"
attrs = "23.1.0"
beautifulsoup4 = "4.9.3"
billiard = "4.1.0"
bs4 = "0.0.1"
celery = "5.3.4"
certifi = "2023.7.22"
charset-normalizer = "2.0.12"
click = "8.1.7"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.3.0"
cssselect = "1.2.0"
django = "4.2.6"
django-jazzmin = "2.6.0"
dnspython = "1.16.0"
feedfinder2 = "0.0.4"
feedparser = "6.0.10"
filelock = "3.12.4"
frozenlist = "1.4.0"
gunicorn = "21.2.0"
idna = "3.4"
jieba3k = "0.35.1"
joblib = "1.3.2"
kombu = "5.3.2"
lxml = "4.9.3"
multidict = "6.0.4"
newspaper3k = "0.2.8"
nltk = "3.8.1"
openai = "0.28.1"
packaging = "23.2"
pillow = "10.1.0"
prompt-toolkit = "3.0.39"
psycopg2 = "2.9.9"
pymongo = "3.12.3"
python-dateutil = "2.8.2"
python-dotenv = ">=0.19.0,<0.20.0"
pyyaml = "6.0.1"
redis = "5.0.1"
regex = "2023.10.3"
requests = "2.26.0"
requests-file = "1.5.1"
sgmllib3k = "1.0.0"
six = "1.16.0"
soupsieve = "2.5"
sqlparse = "0.4.4"
tinysegmenter = "0.3"
tldextract = "5.0.1"
tqdm = "4.66.1"
typing-extensions = "4.8.0"
tzdata = "2023.3"
urllib3 = "1.26.18"
vine = "5.0.0"
wcwidth = "0.2.8"
whitenoise = "6.6.0"
yarl = "1.9.2"
psycopg = "^3.1.12"
ipdb = "^0.13.13"
psycopg2-binary = "^2.9.9"
mega-py = "^1.0.8"
oauthlib = "^3.2.2"
reportlab = "^4.0.6"
pygithub = "^2.1.1"
tiktoken = "^0.5.1"
newsapi-python = "^0.2.7"
google-api-python-client = "^2.108.0"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
